# ChangeLog for x11-misc/qps
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jun 2009; Dror Levin <spatz@psybear.com> qps-1.10.8.4.ebuild:
  Add debug USE flag.

  16 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qps-1.10.8.4.ebuild:
  Fixed pre-stripping, removed redundant src_compile and quoting.

*qps-1.10.8.4 (16 Jun 2009)

  16 Jun 2009; Dror Levin <spatz@psybear.com> +qps-1.10.8.4.ebuild,
  +metadata.xml:
  Initial commit wrt bug 173935, mainly for testing as it doesn't run yet -
  at least on amd64.
