@@ -1,4 +1,4 @@
-DIST qps-1.10.8.4.tar.bz2 205660 RMD160 4ff87623b352e9952be74c1783963b4eb684d49e SHA1 c9cd643a56bfcba49503750f418d30a43cc5e825 SHA256 141c5e0fa6eec6b8aaa0ca984ef0851cf1d71f62ce696952cb03d9f6095d14eb
-EBUILD qps-1.10.8.4.ebuild 656 RMD160 82550a336ef50e2c604441691f15f56cec2e20c2 SHA1 446d4b6ad34f4802d1f338cccdc00da4fbc51776 SHA256 d19dec7843030933537c4569eb36610ea0eee524c894910bb0cf95792dca0216
+DIST qps-1.10.12.1.tar.bz2 223171 RMD160 0a146e12938722d0c21a4a6333de9cdb07234f59 SHA1 bf2c2d9b8743a6bf5d1e00a24dae06feac922424 SHA256 d392b84f0b1d4d838014ff3f9fcbcc8f046b8262edc19a1504808b0ecb9cf70d
+EBUILD qps-1.10.12.1.ebuild 824 RMD160 448b376905f7ad221f290433fedb93f14e451005 SHA1 f808fe5b4b534a60bfa3f74e3e926dfb18008ad2 SHA256 619d62b621953d7b0d9f94af6fd55a4ff14d1184f74bfc40bb741fe49c584b24
 MISC ChangeLog 558 RMD160 58278171da3c62ec05f5a195e2438be341a85827 SHA1 c4109ab4d36721681cbce1d32ddafdaef54917d6 SHA256 18e48b0a1c448ff3b9e7f76574d0c00a297b127fcf8316ac8cbc7bce000af235
 MISC metadata.xml 156 RMD160 2c307fe3d7f514f10f158344b51114121632f411 SHA1 1b61305bd125f03b40ed85c17989140608e1efee SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2
