@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qps-1.10.12.1 (12 Dec 2009)
+
+  12 Dec 2009; Dominik Kapusta <ayoy@gentoo.org> -qps-1.10.8.4.ebuild,
+  +qps-1.10.12.1.ebuild:
+  Version bump, remove old
+
   16 Jun 2009; Dror Levin <spatz@psybear.com> qps-1.10.8.4.ebuild:
   Add debug USE flag.
 
